--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   display: grid;
   place-items: center;
   min-height: 100vh;
@@ -33,7 +33,7 @@ body {
 h1,
 h2,
 h3 {
-  font-family: 'Permanent Marker', cursive;
+  font-family: "Permanent Marker", cursive;
   margin-bottom: 16px;
 }
 
@@ -47,6 +47,10 @@ h2 {
 
 p {
   font-size: 16px;
+}
+
+.author {
+  font-family: "Roboto", sans-serif;
 }
 
 /* ******************* BUTTONS ************************** */
