--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@ main {
   justify-items: center;
 }
 
-.random-cats-section {
+.random-dogs-section {
   margin-bottom: 50px;
 }
 
@@ -191,7 +191,7 @@ hr {
   border-radius: 20px;
 }
 
-.cat-img {
+.dog-img {
   width: 100%;
   height: 90%;
   border-radius: 20px;
